--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <title>Harsh Rajput</title>
   </head>
-  <body>
+  <body class="text-white bg-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
